--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typescript Design Patterns</title>
+    <title>Typescript Design Patterns and SOLID</title>
     <script type="module" src="./typescript/behavioural/chain-of-responsibility/example.ts"></script>
 </head>
 <body>
