--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typescript Design Patterns</title>
-    <script type="module" src="./typescript/behavioural/chain-of-responsibility/example.ts"></script>
+    <script type="module" src="./typescript/structural/composite/example.ts"></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    Hello world
+    <div id="app"></div>
 </body>
 </html>
